--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,7 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env
+    environment:
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
     ports:
       - 5872:5872
